--- a/specs-storage/Cargo.toml
+++ b/specs-storage/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 cid = { version = "0.5", features = ["impl-serde"] }
 
+# plum
 plum_piece = { path = "../primitives/piece" }
 plum_sector = { path = "../primitives/sector" }
 plum_types = { path = "../primitives/types" }
