--- a/primitives/block/Cargo.toml
+++ b/primitives/block/Cargo.toml
@@ -13,6 +13,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_repr = "0.1"
 
+# plum
 plum_address = { path = "../address" }
 plum_bigint = { path = "../bigint" }
 plum_bytes = { path = "../bytes" }
