--- a/primitives/hash/Cargo.toml
+++ b/primitives/hash/Cargo.toml
@@ -10,4 +10,5 @@ fixed-hash = "0.6"
 minicbor = { version = "0.4", features = ["std"] }
 serde = "1.0"
 
+# plum
 plum_bytes = { path = "../bytes" }
