--- a/primitives/message/Cargo.toml
+++ b/primitives/message/Cargo.toml
@@ -11,6 +11,7 @@ minicbor = { version = "0.4", features = ["std"] }
 multihash = "0.11"
 serde = { version = "1.0", features = ["derive"] }
 
+# plum
 plum_address = { path = "../address" }
 plum_bigint = { path = "../bigint" }
 plum_bytes = { path = "../bytes" }
