--- a/primitives/sector/Cargo.toml
+++ b/primitives/sector/Cargo.toml
@@ -11,6 +11,7 @@ minicbor = { version = "0.4", features = ["std"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_repr = "0.1"
 
+# plum
 plum_bigint = { path = "../bigint" }
 plum_bytes = { path = "../bytes" }
 plum_types = { path = "../types" }
