--- a/primitives/tipset/Cargo.toml
+++ b/primitives/tipset/Cargo.toml
@@ -11,6 +11,7 @@ minicbor = { version = "0.4", features = ["std"] }
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
 
+# plum
 plum_bigint = { path = "../bigint" }
 plum_block = { path = "../block" }
 
