--- a/primitives/types/Cargo.toml
+++ b/primitives/types/Cargo.toml
@@ -11,5 +11,6 @@ lazy_static = "1.4"
 minicbor = { version = "0.4", features = ["std"] }
 serde = { version = "1.0", features = ["derive"] }
 
+# plum
 plum_bigint = { path = "../bigint" }
 plum_hash = { path = "../hash" }
