--- a/vm/Cargo.toml
+++ b/vm/Cargo.toml
@@ -8,4 +8,5 @@ license = "GPL-3.0"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 
+# plum
 plum_message = { path = "../primitives/message" }
