--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -14,6 +14,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
 
+# plum
 plum_address = { path = "../primitives/address" }
 plum_bytes = { path = "../primitives/bytes" }
 plum_crypto = { path = "../crypto" }
