--- a/primitives/cid-ext/Cargo.toml
+++ b/primitives/cid-ext/Cargo.toml
@@ -1,17 +1,12 @@
 [package]
-name = "plum_piece"
+name = "cid-ext"
 version = "0.1.0"
 authors = ["The PolkaX Authors"]
 edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
-cid = { version = "0.5", features = ["impl-serde"] }
-minicbor = { version = "0.4", features = ["std"] }
-serde = { version = "1.0", features = ["derive"] }
+cid = { version = "0.5" }
 thiserror = "1.0"
 
 filecoin-proofs = { git = "https://github.com/filecoin-project/rust-fil-proofs.git" }
-
-[dev-dependencies]
-serde_json = "1.0"
