--- a/primitives/sector/Cargo.toml
+++ b/primitives/sector/Cargo.toml
@@ -15,6 +15,7 @@ serde_repr = "0.1"
 plum_bigint = { path = "../bigint" }
 plum_bytes = { path = "../bytes" }
 plum_types = { path = "../types" }
+plum_address = { path = "../address" }
 
 [dev-dependencies]
 serde_json = "1.0"
