Move plum_crypto into primitives dir
Signed-off-by: koushiro <koushiro.cqx@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,6 @@ members = [
   "actor",
   "chain",
 #  "cli",
-  "crypto",
   "hashing",
 #  "libp2p",
 #  "network",
@@ -34,6 +33,7 @@ members = [
   "primitives/bitfield/rle",
   "primitives/block",
   "primitives/bytes",
+  "primitives/crypto",
   "primitives/fc",
   "primitives/hash",
   "primitives/message",
