--- a/actor/Cargo.toml
+++ b/actor/Cargo.toml
@@ -21,7 +21,7 @@ thiserror = "1.0"
 plum_address = { path = "../primitives/address" }
 plum_bigint = { path = "../primitives/bigint" }
 plum_bitfield = { path = "../primitives/bitfield" }
-plum_crypto = { path = "../crypto" }
+plum_crypto = { path = "../primitives/crypto" }
 plum_hash = { path = "../primitives/hash" }
 plum_piece = { path = "../primitives/piece" }
 plum_sector = { path = "../primitives/sector" }
