--- a/primitives/crypto/Cargo.toml
+++ b/primitives/crypto/Cargo.toml
@@ -15,9 +15,9 @@ serde_repr = "0.1"
 thiserror = "1.0"
 
 # plum
-plum_address = { path = "../primitives/address" }
-plum_bytes = { path = "../primitives/bytes" }
-plum_hashing = { path = "../hashing" }
+plum_address = { path = "../address" }
+plum_bytes = { path = "../bytes" }
+plum_hashing = { path = "../../hashing" }
 
 [dev-dependencies]
 serde_json = "1.0"
