--- a/primitives/tipset/Cargo.toml
+++ b/primitives/tipset/Cargo.toml
@@ -21,4 +21,4 @@ multihash = "0.11"
 serde_json = "1.0"
 
 plum_address = { path = "../address" }
-plum_crypto = { path = "../../crypto" }
+plum_crypto = { path = "../crypto" }
