--- a/api-client/Cargo.toml
+++ b/api-client/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 async-trait = "0.1"
 base64 = "0.12"
-cid = { version = "0.5", features = ["impl-serde"] }
+cid = { version = "0.5" , features = ["cbor", "json"] }
 libp2p-core = "0.18"
 log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
 jsonrpc-client = { path = "jsonrpc-client" }
