--- a/libp2p/Cargo.toml
+++ b/libp2p/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
-cid = { version = "0.5", features = ["impl-serde"] }
+cid = { version = "0.5" , features = ["cbor", "json"] }
 fnv = "1.0.6"
 futures = "0.1.29"
 libp2p =  { git = "https://github.com/SigP/rust-libp2p", rev = "776d13ef046358964c7d64cda3295a3a3cb24743" }
