--- a/primitives/message/Cargo.toml
+++ b/primitives/message/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
-cid = { version = "0.5", features = ["impl-serde"] }
+cid = { version = "0.5" , features = ["cbor", "json"] }
 minicbor = { version = "0.4", features = ["std"] }
 multihash = "0.11"
 serde = { version = "1.0", features = ["derive"] }
