--- a/ipld/Cargo.toml
+++ b/ipld/Cargo.toml
@@ -8,5 +8,7 @@ license = "GPL-3.0"
 [dependencies]
 cid = { version = "0.5", features = ["cbor", "json"] }
 minicbor = { version = "0.4", features = ["std", "half"] }
+multibase = "0.8"
 multihash = "0.11"
 serde = { version = "1.0", features = ['derive'] }
+serde_json = "1.0"
