--- a/primitives/block/Cargo.toml
+++ b/primitives/block/Cargo.toml
@@ -19,3 +19,4 @@ plum_bigint = { path = "../bigint" }
 plum_bytes = { path = "../bytes" }
 plum_crypto = { path = "../crypto" }
 plum_message = { path = "../message" }
+plum_sector = { path = "../sector" }
