--- a/primitives/fc/Cargo.toml
+++ b/primitives/fc/Cargo.toml
@@ -11,3 +11,5 @@ thiserror = "1.0"
 
 # plum
 plum_piece = { path = "../piece" }
+plum_address = { path = "../address" }
+plum_types = { path = "../types" }
