--- a/actor/Cargo.toml
+++ b/actor/Cargo.toml
@@ -10,17 +10,15 @@ cid = { version = "0.5" , features = ["cbor", "json"] }
 minicbor = { version = "0.4", features = ["std"] }
 multihash = "0.11"
 serde = { version = "1.0", features = ["derive"] }
-serde_bytes = "0.11"
-serde_repr = "0.1"
 thiserror = "1.0"
 
 # plum
 plum_address = { path = "../primitives/address" }
 plum_bigint = { path = "../primitives/bigint" }
-plum_bitfield = { path = "../primitives/bitfield" }
-plum_crypto = { path = "../primitives/crypto" }
+#plum_bitfield = { path = "../primitives/bitfield" }
+#plum_crypto = { path = "../primitives/crypto" }
 plum_piece = { path = "../primitives/piece" }
-plum_sector = { path = "../primitives/sector" }
+#plum_sector = { path = "../primitives/sector" }
 plum_types = { path = "../primitives/types" }
 
 [dev-dependencies]
