--- a/api-client/Cargo.toml
+++ b/api-client/Cargo.toml
@@ -26,6 +26,7 @@ plum_block = { path = "../primitives/block" }
 plum_bytes = { path = "../primitives/bytes" }
 plum_crypto = { path = "../primitives/crypto" }
 plum_message = { path = "../primitives/message" }
+plum_peerid = { path = "../primitives/peerid" }
 plum_piece = { path = "../primitives/piece" }
 plum_sector = { path = "../primitives/sector" }
 plum_tipset = { path = "../primitives/tipset" }
