--- a/primitives/message/Cargo.toml
+++ b/primitives/message/Cargo.toml
@@ -16,6 +16,7 @@ plum_address = { path = "../address" }
 plum_bigint = { path = "../bigint" }
 plum_bytes = { path = "../bytes" }
 plum_crypto = { path = "../crypto" }
+plum_types = { path = "../types" }
 
 [dev-dependencies]
 serde_json = "1.0"
