--- a/primitives/tipset/Cargo.toml
+++ b/primitives/tipset/Cargo.toml
@@ -14,6 +14,7 @@ thiserror = "1.0"
 # plum
 plum_bigint = { path = "../bigint" }
 plum_block = { path = "../block" }
+plum_types = { path = "../types" }
 
 [dev-dependencies]
 hex = "0.4"
