--- a/ipfs/datastore/Cargo.toml
+++ b/ipfs/datastore/Cargo.toml
@@ -6,5 +6,9 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
-path-clean = "0.1.0"
+path-clean = "0.1"
 serde = { version = "1.0", features = ["derive"] }
+uuid = { version = "0.8", features = ["v4"] }
+
+[dev-dependencies]
+serde_json = "1.0"
