--- a/chain/Cargo.toml
+++ b/chain/Cargo.toml
@@ -6,9 +6,12 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
+anyhow = "1.0"
 cid = { version = "0.5" , features = ["cbor", "json"] }
-data-encoding = "2.1"
-lazy_static = "1.4"
+thiserror = "1.0"
+byteorder = "1.3"
 
 # plum
-plum_address = { path = "../primitives/address" }
+plum_crypto = { path = "../primitives/crypto" }
+plum_hashing = { path = "../hashing" }
+plum_types = { path = "../primitives/types" }
