--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ license = "GPL-3.0"
 name = "plum"
 
 [[bin]]
-name = "plum-node"
+name = "plum_node"
 path = "src/bin/main.rs"
 
 [dependencies]
@@ -19,15 +19,18 @@ path = "src/bin/main.rs"
 
 [workspace]
 members = [
-  "actor",
   "chain",
 #  "cli",
   "hashing",
-  "ipld",
 #  "libp2p",
 #  "network",
 #  "peermgr",
   "params",
+  "wallet",
+
+  # IPFS and IPLD
+  "ipfs/datastore",
+  "ipld",
 
   # primitives
   "primitives/address",
@@ -46,8 +49,9 @@ members = [
   "primitives/tipset",
   "primitives/types",
 
+  # VM
   "vm",
-  "wallet",
+  "actor",
 
   # tools
   "api-client/jsonrpc-client",
