--- a/chain/Cargo.toml
+++ b/chain/Cargo.toml
@@ -15,3 +15,4 @@ byteorder = "1.3"
 plum_crypto = { path = "../primitives/crypto" }
 plum_hashing = { path = "../hashing" }
 plum_types = { path = "../primitives/types" }
+plum_actor = { path = "../actor" }
