--- a/vm/Cargo.toml
+++ b/vm/Cargo.toml
@@ -6,7 +6,13 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
+lazy_static = "1.4.0"
 serde = { version = "1.0", features = ["derive"] }
 
 # plum
 plum_message = { path = "../primitives/message" }
+plum_types = { path = "../primitives/types" }
+plum_sector = { path = "../primitives/sector" }
+plum_piece = { path = "../primitives/piece" }
+plum_actor = { path = "../actor" }
+plum_crypto = { path = "../primitives/crypto" }
