remove OnChainSealVerifyInfo and change SealVerifyInfo
1. add chainepoch in params
2. remove OnChainSealVerifyInfo and fix SealVerifyInfo (match for go specs-actors:v0.5.4 )

--- a/params/Cargo.toml
+++ b/params/Cargo.toml
@@ -8,3 +8,4 @@ license = "GPL-3.0"
 [dependencies]
 # plum
 plum_sector = { path = "../primitives/sector" }
+plum_types = { path = "../primitives/types" }
