--- a/ipfs/blockstore/Cargo.toml
+++ b/ipfs/blockstore/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "plum_ipld_blockstore"
+name = "plum_ipfs_blockstore"
 version = "0.1.0"
 authors = ["The PolkaX Authors"]
 edition = "2018"
