Add plum_ipfs_block and plum_ipfs_blockstore
Signed-off-by: koushiro <koushiro.cqx@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,9 @@ members = [
   "wallet",
 
   # IPFS and IPLD
-  "ipfs/datastore",
+  "ipfs/block",
   "ipfs/blockstore",
+  "ipfs/datastore",
   "ipld",
 
   # primitives
