--- a/ipfs/blockstore/Cargo.toml
+++ b/ipfs/blockstore/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "plum_ipld"
+name = "plum_ipfs_blockstore"
 version = "0.1.0"
 authors = ["The PolkaX Authors"]
 edition = "2018"
@@ -7,8 +7,6 @@ license = "GPL-3.0"
 
 [dependencies]
 cid = { version = "0.5", features = ["cbor", "json"] }
-minicbor = { version = "0.4", features = ["std", "half"] }
-multibase = "0.8"
-serde = { version = "1.0", features = ['derive'] }
-serde_json = "1.0"
 thiserror = "1.0"
+
+plum_ipfs_block = { path = "../block" }
