Add ipfs-datastore-rocksdb dir
Signed-off-by: koushiro <koushiro.cqx@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ members = [
   "ipfs/blockstore",
   "ipfs/datastore",
   "ipfs/datastore-memory",
+  "ipfs/datastore-rocksdb",
   "ipld",
 
   # primitives
