--- a/ipfs/datastore/Cargo.toml
+++ b/ipfs/datastore/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "plum_ipfs_datastore"
+name = "ipfs-datastore"
 version = "0.1.0"
 authors = ["The PolkaX Authors"]
 edition = "2018"
