--- a/ipfs/datastore-rocksdb/Cargo.toml
+++ b/ipfs/datastore-rocksdb/Cargo.toml
@@ -6,5 +6,14 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
+log = "0.4"
+num_cpus = "1.13"
+parking_lot = "0.10"
+regex = "1.3"
+rocksdb = { version = "0.14", features = ["snappy"], default-features = false }
+smallvec = "1.4"
 
 ipfs-datastore = { path = "../datastore" }
+
+[dev-dependencies]
+tempfile = "3.1"
