Add rleplus (not finished yet)
Signed-off-by: koushiro <koushiro.cqx@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ members = [
   "primitives/address",
   "primitives/bigint",
   "primitives/bitfield",
-  "primitives/bitfield/rle",
+  "primitives/bitfield/rleplus",
   "primitives/block",
   "primitives/bytes",
   "primitives/crypto",
