--- a/primitives/bitfield/Cargo.toml
+++ b/primitives/bitfield/Cargo.toml
@@ -10,7 +10,7 @@ minicbor = { version = "0.4", features = ["std"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_bytes = "0.11"
 
-rle = { path = "./rle" }
+rleplus = { path = "rleplus" }
 
 # plum
 plum_bytes = { path = "../bytes" }
