--- a/network/Cargo.toml
+++ b/network/Cargo.toml
@@ -10,5 +10,5 @@ anyhow = "1.0"
 async-std = "1.5"
 futures = "0.3"
 log = "0.4.8"
-plum_libp2p = { path = "../libp2p", package = "plum_libp2p" }
+plum_p2p = { path = "../p2p", package = "plum_p2p" }
 thiserror = "1.0"
