--- a/p2p/Cargo.toml
+++ b/p2p/Cargo.toml
@@ -6,21 +6,17 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
-bytes = "0.5"
+async-trait = "0.1"
 cid = { version = "0.5" , features = ["cbor", "json"] }
-fnv = "1.0.6"
 futures = "0.3"
-futures_codec = "0.4"
-log = "0.4.8"
+log = "0.4"
+minicbor = { version = "0.4", features = ["std"] }
 multihash = "0.11"
-serde = { version = "1.0", features = ["derive"] }
-serde_cbor = { version = "0.11", features = ["tags"] }
-smallvec = "1.2"
-thiserror = "1.0"
 
 plum_bigint = { path = "../primitives/bigint" }
 plum_block = { path = "../primitives/block" }
 plum_message = { path = "../primitives/message" }
+plum_types = { path = "../primitives/types" }
 
 [dependencies.libp2p]
 version = "0.21"
