Move p2p and peermgr into network dir
Signed-off-by: koushiro <koushiro.cqx@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,6 @@ members = [
   "chain",
 #  "cli",
   "hashing",
-  "p2p",
   "params",
   "wallet",
 
@@ -34,7 +33,12 @@ members = [
   "ipfs/datastore-rocksdb",
   "ipld",
 
-  # primitives
+  # Network
+  "network",
+  "network/p2p",
+  "network/peermgr",
+
+  # Primitives
   "primitives/address",
   "primitives/bigint",
   "primitives/bitfield",
@@ -55,7 +59,7 @@ members = [
   "vm",
   "actor",
 
-  # tools
+  # Tools
   "api-client/jsonrpc-client",
   "api-client"
 ]
