--- a/network/p2p/Cargo.toml
+++ b/network/p2p/Cargo.toml
@@ -13,10 +13,10 @@ log = "0.4"
 minicbor = { version = "0.4", features = ["std"] }
 multihash = "0.11"
 
-plum_bigint = { path = "../primitives/bigint" }
-plum_block = { path = "../primitives/block" }
-plum_message = { path = "../primitives/message" }
-plum_types = { path = "../primitives/types" }
+plum_bigint = { path = "../../primitives/bigint" }
+plum_block = { path = "../../primitives/block" }
+plum_message = { path = "../../primitives/message" }
+plum_types = { path = "../../primitives/types" }
 
 [dependencies.libp2p]
 version = "0.21"
