--- a/primitives/sector/Cargo.toml
+++ b/primitives/sector/Cargo.toml
@@ -10,7 +10,7 @@ cid = { version = "0.5" , features = ["cbor", "json"] }
 minicbor = { version = "0.4", features = ["std"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_repr = "0.1"
-
+enumn = "0.1.1"
 # plum
 plum_bigint = { path = "../bigint" }
 plum_bytes = { path = "../bytes" }
