--- a/ipld/Cargo.toml
+++ b/ipld/Cargo.toml
@@ -6,9 +6,13 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
+anyhow = "1.0"
 cid = { version = "0.5", features = ["cbor", "json"] }
 minicbor = { version = "0.4", features = ["std", "half"] }
 multibase = "0.8"
 serde = { version = "1.0", features = ['derive'] }
 serde_json = "1.0"
 thiserror = "1.0"
+
+ipfs-block = { path = "../ipfs/block" }
+ipfs-blockstore = { path = "../ipfs/blockstore" }
