--- a/ipfs/blockstore/Cargo.toml
+++ b/ipfs/blockstore/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
-anyhow = "1.0"
 cid = { version = "0.5", features = ["cbor", "json"] }
+multibase = "0.8"
 
 ipfs-block = { path = "../block" }
+ipfs-datastore = { path = "../datastore" }
