--- a/beacon/Cargo.toml
+++ b/beacon/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["The PolkaX Authors"]
 edition = "2018"
 license = "GPL-3.0"
+build = "build.rs"
 
 [build-dependencies]
 prost-build = "0.6"
