--- a/beacon/Cargo.toml
+++ b/beacon/Cargo.toml
@@ -10,6 +10,13 @@ build = "build.rs"
 protobuf-build = { version = "0.11", default-features = false, features = ["grpcio-prost-codec"] }
 
 [dependencies]
+anyhow = "1.0"
+async-trait = "0.1"
 futures = "0.3"
+lazy_static = "1.4"
 prost = "0.6"
+protobuf = "2"
 grpcio = { version = "0.6", default-features = false, features = ["openssl-vendored", "prost-codec"] }
+
+plum_block = { path = "../primitives/block" }
+plum_types = { path = "../primitives/types" }
