--- a/beacon/Cargo.toml
+++ b/beacon/Cargo.toml
@@ -12,11 +12,14 @@ protobuf-build = { version = "0.11", default-features = false, features = ["grpc
 [dependencies]
 anyhow = "1.0"
 async-trait = "0.1"
+bls-signatures = "0.6"
 futures = "0.3"
+hex = "0.4"
 lazy_static = "1.4"
 prost = "0.6"
 protobuf = "2"
 grpcio = { version = "0.6", default-features = false, features = ["openssl-vendored", "secure", "prost-codec"] }
 
 plum_block = { path = "../primitives/block" }
+plum_hashing = { path = "../hashing" }
 plum_types = { path = "../primitives/types" }
