--- a/primitives/bytes/Cargo.toml
+++ b/primitives/bytes/Cargo.toml
@@ -7,5 +7,6 @@ license = "GPL-3.0"
 
 [dependencies]
 base64 = "0.12"
+hex = "0.4"
 minicbor = { version = "0.4", features = ["std"] }
 serde = "1.0"
