--- a/beacon/Cargo.toml
+++ b/beacon/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0"
 async-trait = "0.1"
 bls-signatures = "0.6"
 hex = "0.4"
+parking_lot = "0.11"
 reqwest = { version = "0.10", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 
