--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ path = "src/bin/main.rs"
 [dependencies]
 
 [replace]
-"cid:0.5.0" = { git = "https://github.com/PolkaX/rust-cid", branch = "impl-cbor-and-json" }
+"cid:0.5.1" = { git = "https://github.com/PolkaX/rust-cid", branch = "impl-cbor-and-json" }
+"multihash:0.11.2" = { git = "https://github.com/PolkaX/rust-multihash", branch = "add-filecoin-code" }
 
 [workspace]
 members = [
