--- a/beacon/Cargo.toml
+++ b/beacon/Cargo.toml
@@ -17,7 +17,7 @@ serde = { version = "1.0", features = ["derive"] }
 plum_block = { path = "../primitives/block" }
 plum_bytes = { path = "../primitives/bytes" }
 plum_hash = { path = "../primitives/hash" }
-plum_hashing = { path = "../hashing" }
+plum-hashing = { path = "../hashing" }
 plum_types = { path = "../primitives/types" }
 
 [dev-dependencies]
