--- a/ipfs/bitswap/Cargo.toml
+++ b/ipfs/bitswap/Cargo.toml
@@ -10,7 +10,13 @@ build = "build.rs"
 prost-build = "0.6"
 
 [dependencies]
+async-trait = "0.1"
+cid = { version = "0.5" , features = ["cbor", "json"] }
+multihash = "0.11"
 prost = "0.6"
+libp2p = { version = "0.22", default-features = false, features = ["request-response"] }
+thiserror = "1.0"
+unsigned-varint = "0.4"
 
 ipfs-block = { path = "../block" }
 ipld = { path = "../../ipld" }
